# cogeo-mosaic

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  index.md  main.tf  mkdocs.yml  package.json  pyproject.toml  serverless.yml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  deploy_mkdocs.yml  release.yml
API/backends/DynamoDB/: index.html
API/backends/File/: index.html
API/backends/HTTP/: index.html
API/backends/S3/: index.html
API/backends/SQLite/: index.html
API/backends/STAC/: index.html
API/backends/base/: index.html
API/cache/: index.html
API/mosaic/: index.html
advanced/backends/: backends.md  index.html
advanced/custom/: index.html
advanced/dynamic/: index.html
advanced/readers/: index.html  readers.md
cli/: cli.md  index.html
cogeo_mosaic/: __init__.py  cache.py  create.py  custom_cmaps.py  custom_methods.py  errors.py  logger.py  model.py  models.py  mosaic.py  ogc.py  overview.py  overviews.py  supermorecado.py  templates.py  translate.py  utils.py
cogeo_mosaic/backend/: auto.py  base.py  dynamo.py  file.py  http.py  s3.py  utils.py
cogeo_mosaic/backends/: __init__.py  auto.py  az.py  base.py  dynamo.py  dynamodb.py  file.py  gs.py  http.py  memory.py  s3.py  sqlite.py  stac.py  utils.py  web.py
cogeo_mosaic/handlers/: __init__.py  api.py  mosaic.py  tiles.py  web.py
cogeo_mosaic/scripts/: __init__.py  cli.py
contributing/: index.html
demo/: README.md  index.html
demo/digitalglobe/: README.md  index.html
demo/facebook/: README.md  index.html  mvt.html
doc/: API.md
docs/: AdvancedTopics.md  STAC_Backend.md  backends.md  cli.md  intro.md  mkdocs.yml  v3_migration.md
docs/API/: cache.md  mosaic.md
docs/API/backends/: GoogleCloudStorage.md  HTTP.md
docs/advanced/: backends.md  custom.md  dynamic.md  readers.md
docs/examples/: Create_a_Dynamic_RtreeBackend.ipynb  Create_a_Dynamic_StacBackend.ipynb
docs/src/: intro.md
docs/src/API/backends/: DynamoDB.md  File.md  HTTP.md  S3.md  SQLite.md  STAC.md  base.md
docs/src/advanced/: backends.md  custom.md  dynamic.md
docs/src/examples/: Create_a_Dynamic_RtreeBackend.ipynb  Create_a_Dynamic_StacBackend.ipynb
examples/Create_a_Dynamic_RtreeBackend/: Create_a_Dynamic_RtreeBackend.ipynb  index.html
examples/Create_a_Dynamic_StacBackend/: Create_a_Dynamic_StacBackend.ipynb  index.html
intro/: index.html
release-notes/: index.html
search/: search_index.json
tests/: test_api.py  test_backends.py  test_backends_utils.py  test_cache_config.py  test_cli.py  test_cmap.py  test_create.py  test_model.py  test_mosaic.py  test_ogc.py  test_overview.py  test_planetcantile.py  test_supermorecado.py  test_tiles.py  test_translate.py  test_utils.py  test_web.py
tests/fixtures/: cog1_small.tif  cog1_uint32.tif  mars_ctx_stac_asset.json  mosaic.json  mosaic_0.0.1.json  mosaics.db  request.json  stac_p1.geojson  stac_p2.geojson
v3_migration/: index.html  v3_migration.md
v6_migration/: index.html  v6_migration.md
