[bumpversion]
current_version = 4.1.1
commit = True
tag = True
tag_name = {new_version}
parse = 
	(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
	((?P<pre>a|b|rc)(?P<prenum>\d+))?
serialize = 
	{major}.{minor}.{patch}{pre}{prenum}
	{major}.{minor}.{patch}

[metadata]
version = attr: cogeo_mosaic.__version__

[bumpversion:file:cogeo_mosaic/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[isort]
profile = black
known_first_party = cogeo_mosaic
known_third_party = rasterio,rio_tiler,morecantile,supermercado,pygeos
default_section = THIRDPARTY

[flake8]
ignore = E501,W503,E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 15
max-line-length = 90

[mypy]
no_strict_optional = True

[pydocstyle]
select = D1
match = (?!test).*\.py
